--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+/* src/index.css */
+/* 1. Import Inter weights (with Cyrillic support) */
+@import "@fontsource/inter/400.css";
+@import "@fontsource/inter/600.css";
+@import "@fontsource/inter/700.css";
+@import "@fontsource/inter/cyrillic.css";
+@import "@fontsource/inter/cyrillic-ext.css";
+
+
+/* 2. Then your Tailwind layers */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
