--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,6 @@ h3 {
 }
 
 /* Buttons */
-button {
+/* button {
   @apply rounded-lg border border-transparent px-4 py-2 text-white bg-blue-600 transition hover:bg-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300;
-}
+} */
