--- a/src/index.css
+++ b/src/index.css
@@ -45,5 +45,5 @@ h3 {
 
 /* Buttons */
 button {
-  @apply rounded-lg border border-transparent px-4 py-2 text-white bg-blue-600 transition hover:bg-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300;
+  @apply rounded-lg border border-transparent px-4 py-2 text-white bg-blue-600 transition  focus:outline-none focus:ring-4 focus:ring-blue-300;
 }
